# OCR_checkbox

./: .gitignore  CHECKBOXQA_ANALYSIS.md  CHECKBOXQA_COMPLETE_STRATEGY.md  CHECKBOXQA_EVALUATION_FRAMEWORK.md  CHECKBOXQA_VISUAL_GROUNDING.md  CLAUDE.md  COLAB_CLASSIFICATION_TRAINING.md  COLAB_DETECTION_TEST.md  COLAB_END_TO_END_EVALUATION.md  COLAB_VLM_INTEGRATION.md  HYBRID_VLM_IMPLEMENTATION.md  PROCESSING_BUDGET_ANALYSIS.md  README.md  README_COLAB.md  SIMPLE_CLASSIFICATION_COLAB.md  SIMPLE_COLAB_SETUP.md  TRAINING_RESULTS.md  VLM_APPROACH_COMPARISON.md  pyproject.toml  requirements.txt.bak.delete  run.sh
.claude/: settings.local.json
colab/: setup_colab_environment.py
colab_package/: UPLOAD_INSTRUCTIONS.md  augment_real_checkboxes.py  colab_notebook_template.ipynb  default.yaml  download_data.py  infer.py  prepare_datasets.py  test_installation.py  train_yolo12_colab.py  train_yolo12_detection.py
colab_package/classification/: __init__.py  classifier.py
colab_package/detection/: detector.py
colab_package/pipeline/: pipeline.py
colab_package/utils/: __init__.py  config.py
configs/: default.yaml
data/: checkboxqa_classification_labels.json
docs/: approach.md
scripts/: __init__.py  analyze_checkboxqa.py  checkboxqa_pipeline.py  demo.py  end_to_end_evaluation.py  extract_checkbox_labels_from_funsd.py  generate_classification_dataset.py  generate_synthetic_checkboxes.py  prepare_classification_dataset.py  process_checkboxqa_pdfs.py  question_aware_processor.py  run_data_preparation.py  test_detection_on_real.py  test_trained_model.py  test_yolo12.py  train_classification.py  unified_data_preparation.py  vlm_integration.py
src/: __init__.py
src/detection/: __init__.py  detector.py
src/pipeline/: __init__.py
src/utils/: config.py  pdf_processing.py  preprocessing.py
